[package]
name = "wormhole-agentd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wormhole-agentd"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
] }
uuid = { workspace = true, features = ["serde", "v7"] }
