[package]
name = "wormhole-agentd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wormhole-agentd"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
agent-core = { path = "../../../../crates/agent-core" }
compute-core = { path = "../../../../crates/compute-core" }
anyhow = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "query",
    "tokio",
] }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
] }
uuid = { workspace = true, features = ["serde", "v7"] }
